# rag-customer-support

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
RAG_IC&MS/: README.md  rag-system-specification.md
RAG_IC&MS/config/: settings.py
RAG_IC&MS/data/: Deployment_Guide-OnPremise_DE_V.2.1.6.docx
RAG_IC&MS/scripts/: test_multilingual.py
RAG_IC&MS/src/api/: main.py
RAG_IC&MS/src/audit/: logger.py
RAG_IC&MS/src/generation/: response_generator.py
RAG_IC&MS/src/ingestion/: embedder.py  pipeline.py
RAG_IC&MS/src/ingestion/parsers/: docx_parser.py  email_parser.py  zendesk_parser.py
RAG_IC&MS/src/integrations/: zendesk_client.py
RAG_IC&MS/src/retrieval/: reranker.py
RAG_IC&MS/tests/: test_audit.py  test_email_parser_real.py  test_escalation.py  test_feedback.py  test_parsers.py  test_response_generator.py
RAG_IC&MS/tools/: test_ui.py
config/: settings.py
scripts/: email_monitor.py  import_zendesk_csv.py  reindex.py  test_query.py
src/api/: main.py
src/feedback/: learning_loop.py
src/generation/: complexity_analyzer.py  escalation_classifier.py  language_detector.py  response_generator.py
src/ingestion/: chunker.py
src/ingestion/parsers/: pdf_parser.py
src/integrations/: email_client.py
src/retrieval/: pinecone_client.py
tests/: test_api.py  test_chunker.py  test_complexity_analyzer.py  test_email_client.py  test_language_detector.py  test_zendesk_client.py
zendesk-app/: manifest.json
zendesk-app/assets/: iframe.html
zendesk-app/src/: app.js
zendesk-app/translations/: en.json
